ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: 1.8.2
    • Component/s: Tools
    • Environment:
      unix, macosx
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      dumping a collection using mongodump with option --out - gives an error.

      Steps i took:

      mongodump --db test -u username -p Password -h mymongodatabase.onthecloud:12888 -vvvvv --collection posts --out -

      displays the error:
      Wed Feb 29 21:48:13 creating new connection
      to:mymongodatabase.onthecloud:12888
      Wed Feb 29 21:48:13 BackgroundJob starting: ConnectBG
      Wed Feb 29 21:48:13 connected connection!
      connected to: mymongodatabase.onthecloud:12888
      Wed Feb 29 21:48:13 nextSafe():

      { $err: "unauthorized db:test lock type:-1 client:10.3.55.10", code: 10057 }


      Wed Feb 29 21:48:13 User Assertion: 13106:nextSafe():

      { $err: "unauthorized db:test lock type:-1 client:10.3.55.10", code: 10057 }


      assertion: 13106 nextSafe():

      { $err: "unauthorized db:test lock type:-1 client:10.3.55.10", code: 10057 }

      '

      however when i remove '--out -', it will dump out the collection fine. I've tested this on 1.8.2 and the lastest version 2.0.3.

      I also tested this on my local mongo which does not have authentication (testing it with the option '--out -') and that works fine. Im guessing somethings wrong with authentication?

            Assignee:
            Daniel Pasette (Inactive)
            Reporter:
            Charles Chen
            Votes:
            3 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: