SERVER-5233: fix mongodump with authentication + test